--- a/front-end/src/components/header/header.styles.css
+++ b/front-end/src/components/header/header.styles.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;   
     line-height: 7.778vh;
-    position: relative;
+    /* position: relative; */
     z-index: 2;
 } 
 .nav-left{
@@ -17,7 +17,9 @@
 .nav-item{
     width: 14.583vw;
     height: 7.778vh;
-    text-align: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 /* 
 .search-bar{
@@ -29,11 +31,9 @@
     color: rgb(0, 0, 0);
     text-decoration: none;   
     font-size: 2vw; 
-}
-.create{
-    font-size: 3.472vw;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 
 .search-icon{
@@ -41,6 +41,41 @@
 }
 .burger{
     display: none;
+}
+.btn-chat{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-chat img{
+    width: 5.556vh;
+    height: 5.556vh;
+}
+.avatar-header{
+    width: 5.556vh;
+    height: 5.556vh;
+    border: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+}
+.avatar-header img{
+    width: 4.444vh;
+    height: 4.444vh;
+}
+.btn-burger{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-burger img{
+    width: 2.93vh;
+    height: 1.563vh;
 }
 .btn-burger:hover{
     cursor: pointer;
@@ -53,7 +88,9 @@
     .nav-item{
         width: 25vw;
     }
-
+    .create{
+        display: none;
+    }
     .chat{
         display: none;
     }
@@ -68,20 +105,18 @@
     }
     .burger{
         display: block;
-        width: 14.063vw;
+        width: 14.063vw; 
     }
 }
 
 @media(min-width: 768px){
 
-    .create{
-        display: none;
+    .header{  
+        line-height: 6.348vh;
     }
-    .chat{
-        display: none;
-    }
-    .prof{
-        display: none;
+    .nav-item{
+        width: 14.583vw;
+        height: 6.348vh;
     }
     .search-bar{
         display: block;
@@ -92,12 +127,16 @@
     .burger{
         display: block;
     }
-    .nav-item{
-        width: 14.583vw;
-    }
+
 }
 
 @media(min-width: 1024px){
+    .header{  
+        line-height: 70px;
+    }
+    .nav-item{
+        height: 70px;
+    }
     .create{
         display: block;
     }
@@ -110,8 +149,57 @@
     .burger{
         display: none;
     }
+
+    .btn-chat img{
+        width: 50px;
+        height: 50px;
+    }
+    .avatar-header{
+        width: 50px;
+        height: 50px;
+        border: 2px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50px;
+    }
+    .avatar-header img{
+        width: 40px;
+        height: 40px;
+    }
+    .btn-burger img{
+        width: 26px;
+        height: 14px;
+    }
 }
 
-@media(max-width:2560px){
+@media(min-width: 1440px){
+    .header{  
+        line-height: 7.778vh;
+    }
+    .nav-item{
+        height: 7.778vh;
+    }
+    .btn-chat img{
+        width: 5.556vh;
+        height: 5.556vh;
+    }
+    .avatar-header{
+        width: 5.556vh;
+        height: 5.556vh;
+        border: 2px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50px;
+    }
+    .avatar-header img{
+        width: 4.444vh;
+        height: 4.444vh;
+    }
 
+    .btn-burger img{
+        width: 2.93vh;
+        height: 1.563vh;
+    }
 }
