--- a/front-end/src/components/side-bar/side-bar.styles.css
+++ b/front-end/src/components/side-bar/side-bar.styles.css
@@ -1,11 +1,25 @@
 .sidebar-container{
     position: absolute;
     overflow: hidden;
-    top: 8.889vh;
+    top: 6.348vh;
     right: 0;
-    width: 45.573vw;
-    height: 91.111vh;
+    width: 100vw;
+    height: 93.652vh;
     z-index: -1;
+    transition: 0.5s;  
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+.black-blur{
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: -100vw;
+    background-color: black;
+    opacity: 0%;
+    transition: 0.2s;
 }
 .sidebar{
     width: 100vw;
@@ -13,11 +27,157 @@
     position: absolute;
     top: 0;
     right: -100vw;
-    background-color: rgb(8, 3, 106);
-    transition: 0.5s;
-    color: yellow;
-    font-size: 50px;    
+    background-color: #F0F2EF;
+    transition: 0.5s;  
+    display: flex;
+    flex-direction: column;
+    gap: 1.953vh;
+    padding: 0.977vh 0 0 1.302vw;
+    box-sizing: border-box;
+    opacity: 100%;
 }
+
+/* .col_1{
+    display: flex;
+    flex-direction: column;
+    gap: 2.93vh;
+    padding: 10px;
+    box-sizing: border-box;
+    align-items: center;
+    color: white;
+}
+.col_2{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    box-sizing: border-box;
+    position: relative;
+    color: white;   
+}
+.avatar-sidebar{
+    width: 5.176vh;
+    height: 5.176vh;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+}
+.avatar-sidebar img{
+    width: 4.199vh;
+    height: 4vh;
+}
+
+.chat-img{
+    width: 6.51vw;
+    height: 4.883vh;
+}
+.create-img{
+    width: 2.93vh;
+    height: 2.93vh;
+}
+.my-prof{
+    margin-top: 10px;
+    font-size: 25px;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+.chat-sidebar{
+    margin-top: 4.677vh;
+    font-size: 25px;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+.create-post-sidebar{
+    margin-top: 3.327vh;
+    font-size: 25px;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+} */
+
+
+
+.my-profile-block_sidebar{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0;
+}
+.avatar-sidebar{
+    width: 5.176vh;
+    height: 5.176vh;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+}
+.avatar-sidebar img{
+    width: 4.199vh;
+    height: 4vh;
+}
+.my-prof-btn-sidebar{
+    display: flex;
+    gap: 1.302vw;
+    align-items: center;
+    width: 100%;
+    font-size: 3.255vw;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+
+.chat-block_sidebar{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 0 0 0.326vw;
+    box-sizing: border-box;
+}
+.chat-block_sidebar img{
+    width: 4.883vh;
+    height: 4.883vh;
+}
+.chat-btn-sidebar{
+    display: flex;
+    align-items: center;
+    gap: 1.302vw;
+    width: 100%;
+    font-size: 3.255vw;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+
+.create-post-block_sidebar{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 0 0 1.563vw;
+    box-sizing: border-box;
+    
+}
+.create-post-block_sidebar img{
+    width: 2.93vh;
+    height: 2.93vh;
+} 
+.create-btn-sidebar{
+    display: flex;
+    align-items: center;
+    gap: 2.604vw;
+    font-size: 3.255vw;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+}
+
+
+
+
+
 
 @media(min-width: 1024px){
     .sidebar-container{
