--- a/front-end/src/pages/my_profile/my_frofile.styles.css
+++ b/front-end/src/pages/my_profile/my_frofile.styles.css
@@ -1,15 +1,173 @@
-.my-profile-app{
+.my-profile-page-container{
     display: flex;
-    width: 71vh;
-    height: 100%;
-    /* margin: 0 auto; */
-    position: relative;
+    width: 54.862vw;
+    height: 92.222vh;
+    padding: 1.111vh 0 1.111vh 0;
+    box-sizing: border-box;
+    left: 32.639vw;
+    right: 12.5vw;
+    position: fixed;
 }
-.my-profile-block{
+.my-profile-page-main{
+    width: 34.723vw;
+    background-color: #F0F2EF;
+    box-shadow: 1px 1px 10px #c3c5c1;
+    overflow: auto;
+}
+.user-menu-container{
+    width: 19.444vw;
+    background-color: #F0F2EF;
+    box-shadow: 1px 1px 10px #c3c5c1;
+    margin-left: 0.694vw;
+}
+
+.sort-container{
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 1.222vh 0;
+    box-sizing: border-box;
+}
+.btn-block-sort{
+    width: 5vh;
+    height: 5vh;
+    border: 0;
+    background: #CAC8C1;
+}
+.btn-column-sort{
+    width: 5vh;
+    height: 5vh;  
+    border: 0;  
+}
+.block-sort-icon{
+    width: 1.91vw;
+    height: 1.91vw;
+}
+.column-sort-icon{
+    width: 2.083vw;
+    height: 1.563vw;
+}
+
+.my-profile-post-container{
     width: 100%;
-    background-color: grey;
-    position: relative;
+    display: flex;
+    flex-direction: row;
+    gap: 0.278vw;
+    flex-wrap: wrap;
+    padding: 1.333vh 0;
+    box-sizing: border-box;
+}
+.block-post{
+    width: 11.25vw;
+    height: 11.25vw;
+    overflow: hidden;
+}
+.block-post-img{
+    width: 100%;
     height: 100%;
-    padding: 2vh 0vh 2vh 0vh ;
-    text-align: center;
+    object-fit: cover;
+}
+
+.column-post{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: none;
+}
+
+
+
+
+
+
+@media(min-width: 1024px){
+    .my-profile-page-container{
+        width: 790px;
+        left: 21.484vw;
+    }
+    .my-profile-page-main{
+        width: 500px;
+    }
+    .user-menu-container{
+        width: 280px;
+    }
+    .sort-container{
+        padding: 11px 0;
+        box-sizing: border-box;
+    }
+    .btn-block-sort{
+        width: 45px;
+        height: 45px;
+    }
+    .btn-column-sort{
+        width: 45px;
+        height: 45px;
+    }
+    .block-sort-icon{
+        width: 27.5px;
+        height: 27.5px;
+    }
+    .column-sort-icon{
+        width:30px;
+        height: 22.5px;
+    }
+
+    .my-profile-post-container{
+        gap: 4px;
+        padding: 12px 0;
+        box-sizing: border-box;
+    }
+    .block-post{
+        width: 162px;
+        height: 162px;
+    }
+}
+
+
+
+
+
+
+
+@media(min-width: 1367px){
+    .my-profile-page-container{
+        width: 54.862vw;
+        left: 32.639vw;
+    }
+    .my-profile-page-main{
+        width: 34.723vw;
+    }
+    .user-menu-container{
+        width: 19.444vw;
+    }
+    .sort-container{
+        padding: 1.222vh 0;
+        box-sizing: border-box;
+    }
+    .btn-block-sort{
+        width: 5vh;
+        height: 5vh;
+    }
+    .btn-column-sort{
+        width: 5vh;
+        height: 5vh;
+    }
+    .block-sort-icon{
+        width: 1.91vw;
+        height: 1.91vw;
+    }
+    .column-sort-icon{
+        width: 2.083vw;
+        height: 1.563vw;
+    }
+
+    .my-profile-post-container{
+        gap: 0.278vw;
+        padding: 1.333vh 0;
+        box-sizing: border-box;
+    }
+    .block-post{
+        width: 11.25vw;
+        height: 11.25vw;
+    }
 }
