new main page, post designe, back-end on postgre

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -3,7 +3,7 @@
     width: 100%;
     margin: 0;
     height: 100vh;
-    background-color: #F3F1EA;
+    background-color: #F0F0F0;
 }
 .app-container{
     width: 100%;
