--- a/front-end/src/pages/create-post_page/create-post_page.styles.css
+++ b/front-end/src/pages/create-post_page/create-post_page.styles.css
@@ -2,15 +2,16 @@
     display: flex;
     flex-direction: column;
     width: 34.7vw;
-    padding: 1.111vh 0 1.111vh 0;
+    height: 100vh;
+    padding: 8.796vh 0 0.926vh 0;
     box-sizing: border-box;
 }
 .create-post-container{
     width: 100%;
-    height: 92.222vh;
+    height: 100vh;
     padding: 4.444vh 0 4.444vh 0;
     box-sizing: border-box;
-    background-color: #F0F2EF;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     gap: 1.667vh;
@@ -22,7 +23,7 @@
     width: 29.167vw;
     min-height: 22.222vh;
     overflow: hidden;   
-    background-color: #DEDCD6;
+    background-color: #F0F0F0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,18 +46,18 @@
 .post-info{
     width: 28.889vw;
     min-height: 4.444vh;
-    background-color: #DEDCD6;
+    background-color: #F0F0F0;
     border: 0;   
 }
 .post-info::placeholder {
     font-size: 15px;
     color: rgb(143, 143, 143);
 }  
-.post-description{
+.create-post-description{
     font-size: 15px;
     width: 28.889vw;
     min-height: 11.111vh;
-    background-color: #DEDCD6;
+    background-color: #F0F0F0;
     border: 0;   
 }
 .btn-create{
@@ -82,7 +83,7 @@
 /* ----------------  768  ------------------------ */
 
 
-
+/* 
 @media(min-width: 768px){
     .create-post-app{
         width: 100%;
@@ -108,7 +109,7 @@
     .post-info::placeholder{
         font-size: 1.66vh;
     }
-    .post-description{
+    .create-post-description{
         font-size: 1.66vh;
         width: 82.292vw;
     }
@@ -125,7 +126,7 @@
         left: -32.552vw;
         margin: 0 0 -1.6vh 0;
     }
-}
+} */
 
 
 
@@ -135,7 +136,7 @@
 
 
 
-@media(min-width: 1024px){
+/* @media(min-width: 1024px){
     .create-post-app{
         width: 500px;
         height: 88.333vh;
@@ -155,7 +156,7 @@
         width: 420px;
         min-height: 200px;
     }
-    .post-description{
+    .create-post-description{
         width: 420px;
         min-height: 100px;
     }
@@ -173,7 +174,7 @@
         left: -145px;
         margin: 0 0 -1.667vh 0;
     }
-}
+} */
 
 
 
@@ -181,7 +182,7 @@
 
 
 
-@media(min-width: 1440px){
+/* @media(min-width: 1440px){
     .create-post-app{
         width: 34.7vw;
         height: 92.222vh;
@@ -195,7 +196,7 @@
         width: 29.167vw;
         min-height: 22.222vh;
     }
-    .post-description{
+    .create-post-description{
         width: 28.889vw;
         min-height: 11.111vh;
     }
@@ -213,4 +214,4 @@
         left: -10.069vw;
         margin: 0 0 -1.6vh 0;
     }
-}
+} */
