--- a/front-end/src/pages/full-page-post/full-page-post.style.css
+++ b/front-end/src/pages/full-page-post/full-page-post.style.css
@@ -71,7 +71,7 @@
     font-weight: bold;
     overflow: auto;
 }
-.info-hr{
+.fullpost-hr{
     position: absolute;
     bottom: 7.13vh;
     width: 28.125vw;
