--- a/front-end/src/pages/my_profile/my_frofile.styles.css
+++ b/front-end/src/pages/my_profile/my_frofile.styles.css
@@ -24,7 +24,7 @@
     box-sizing: border-box;
 }
 
-.user-menu-container{
+.user-menu-profile-container{
     width: 24.792vw;
     height: 57.407vh;
     background-color: #ffffff;
@@ -33,6 +33,12 @@
     position: absolute;
     top: 12.037vh;
     right: 10vw;
+}
+.menu-profile-header{
+    width: 100%;
+    height: 10.185vh;
+    background-color: #616F54;
+    border-radius: 15px 15px 0 0;
 }
 
 .sort-container{
