--- a/front-end/src/pages/create-post_page/create-post_page.styles.css
+++ b/front-end/src/pages/create-post_page/create-post_page.styles.css
@@ -55,7 +55,8 @@
 }  
 .create-post-description{
     font-size: 15px;
-    width: 28.889vw;
+    min-width: 28.889vw;
+    max-width: 28.889vw;
     min-height: 11.111vh;
     background-color: #F0F0F0;
     border: 0;   
