--- a/front-end/src/components/header/header.styles.css
+++ b/front-end/src/components/header/header.styles.css
@@ -43,6 +43,10 @@
 .burger{
     display: none;
 }
+.create-btn-icon{
+    width: 5vh;
+    height: 5vh;
+}
 .btn-chat{
     width: 100%;
     height: 100%;
@@ -50,11 +54,11 @@
     align-items: center;
     justify-content: center;
 }
-.btn-chat img{
-    width: 5.556vh;
-    height: 5.556vh;
+.chat-btn-icon{
+    width: 5vh;
+    height: 5vh;
 }
-.avatar-header{
+/* .avatar-header{
     width: 5.556vh;
     height: 5.556vh;
     border: 2px solid black;
@@ -62,10 +66,10 @@
     align-items: center;
     justify-content: center;
     border-radius: 50px;
-}
-.avatar-header img{
-    width: 4.444vh;
-    height: 4.444vh;
+} */
+.avatar-header-icon{
+    width: 5vh;
+    height: 5vh;
 }
 .btn-burger{
     width: 100%;
