--- a/front-end/src/pages/create-post_page/create-post_page.styles.css
+++ b/front-end/src/pages/create-post_page/create-post_page.styles.css
@@ -53,6 +53,22 @@
     font-size: 15px;
     color: rgb(143, 143, 143);
 }  
+.deadline-input{
+    appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  background-color: #e9e9e9; /* Light gray background */
+  padding: 0.5rem 1rem; /* Add some padding */
+  border: 1px solid #ccc; /* Subtle border */
+  border-radius: 4px; /* Rounded corners */
+  cursor: pointer;
+
+  &::placeholder {
+    color: #999;
+    font-style: italic;
+  }
+}
 .create-post-description{
     font-size: 15px;
     min-width: 28.889vw;
